# audioscript

./: .audioscript.yaml  .gitignore  LICENSE  Makefile  PRD-deepscript.md  PRD-speaker-identity.md  PRD-sync.md  PRD.md  PROJECT_SUMMARY.md  README.md  TASKS_COMPLETED.md  audioscript_docs.zip:Zone.Identifier  prompt_plan.md  pyproject.toml  requirements.txt  try_audioscript.py
audioscript/: __init__.py
audioscript/cli/: main.py  output.py
audioscript/cli/commands/: __init__.py  analyze_cmd.py  check_cmd.py  cost_cmd.py  detect_lang.py  diarize_cmd.py  digest_cmd.py  init_cmd.py  schema_cmd.py  search_cmd.py  service_cmd.py  show_cmd.py  speakers_cmd.py  status_cmd.py  sync_cmd.py  transcribe.py  vad_cmd.py
audioscript/config/: settings.py
audioscript/exporters/: __init__.py  minotes_exporter.py
audioscript/formatters/: __init__.py  markdown_formatter.py
audioscript/llm/: __init__.py  analyzer.py  cost_tracker.py
audioscript/processors/: __init__.py  audio_cleaner.py  audio_processor.py  backend_protocol.py  chunker.py  diarizer.py  faster_whisper_transcriber.py  hallucination_detector.py  nim_transcriber.py  types.py  whisper_transcriber.py
audioscript/speakers/: __init__.py  calendar.py  enrollment.py  identity_db.py  models.py  reporter.py  resolution.py  transcript_hints.py
audioscript/sync/: __init__.py  discovery.py  engine.py  wsl.py
audioscript/utils/: error_classification.py  file_utils.py  logging.py  math_utils.py  metadata.py  validate.py
audioscript_docs/: todo.md
samples/: README.md
skills/: audioscript-check.md  audioscript-detect-language.md  audioscript-diarize.md  audioscript-schema.md  audioscript-shared.md  audioscript-status.md  audioscript-transcribe.md  audioscript-vad.md
tests/: test_audio_cleaner.py  test_audio_processor.py  test_backend_protocol.py  test_calendar_joiner.py  test_check_cmd.py  test_cli.py  test_config.py  test_diarizer.py  test_enrollment.py  test_error_classification.py  test_file_utils.py  test_hallucination_detector.py  test_identity_db.py  test_logging.py  test_markdown_formatter.py  test_metadata.py  test_minotes_exporter.py  test_output.py  test_speaker_models.py  test_speaker_resolution.py  test_status_cmd.py  test_sync_cmd.py  test_sync_discovery.py  test_sync_engine.py  test_transcript_hints.py  test_validate.py  test_whisper_transcriber.py  test_wsl.py
